// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageWallet has the expected html structure 1`] = `
<tm-page-stub
  data-title="Wallet"
  dataset="[object Object],[object Object],[object Object]"
  refresh="function () { [native code] }"
  signinrequired="true"
  subtitle=""
  title=""
>
  <tm-data-msg-stub
    icon="help_outline"
    id="account_empty_msg"
  >
    <div>
      
      Account empty
    
    </div>
     
    <div>
      
      This account doesn't have anything in it yet.
    
    </div>
  </tm-data-msg-stub>
   
  <li-coin-stub
    class="tm-li-balance"
    coin="[object Object]"
  />
  <li-coin-stub
    class="tm-li-balance"
    coin="[object Object]"
  />
  <li-coin-stub
    class="tm-li-balance"
    coin="[object Object]"
  />
  <li-coin-stub
    class="tm-li-balance"
    coin="[object Object]"
  />
   
  <tm-btn-stub
    color="green"
    value="Get Tokens"
  />
   
  <send-modal-stub />
</tm-page-stub>
`;

exports[`PageWallet should not show denoms or the faucet button for a user who is not signed in 1`] = `
<tm-page-stub
  data-title="Wallet"
  dataset="[object Object],[object Object],[object Object]"
  refresh="function () { [native code] }"
  signinrequired="true"
  subtitle=""
  title=""
>
  <tm-data-msg-stub
    icon="help_outline"
    id="account_empty_msg"
  >
    <div>
      
      Account empty
    
    </div>
     
    <div>
      
      This account doesn't have anything in it yet.
    
    </div>
  </tm-data-msg-stub>
   
  <li-coin-stub
    class="tm-li-balance"
    coin="[object Object]"
  />
  <li-coin-stub
    class="tm-li-balance"
    coin="[object Object]"
  />
  <li-coin-stub
    class="tm-li-balance"
    coin="[object Object]"
  />
  <li-coin-stub
    class="tm-li-balance"
    coin="[object Object]"
  />
   
  <!---->
   
  <send-modal-stub />
</tm-page-stub>
`;

exports[`PageWallet should show the sending modal 1`] = `
<tm-page-stub
  data-title="Wallet"
  dataset="[object Object],[object Object],[object Object]"
  refresh="function () { [native code] }"
  signinrequired="true"
  subtitle=""
  title=""
>
  <tm-data-msg-stub
    icon="help_outline"
    id="account_empty_msg"
  >
    <div>
      
      Account empty
    
    </div>
     
    <div>
      
      This account doesn't have anything in it yet.
    
    </div>
  </tm-data-msg-stub>
   
  <li-coin-stub
    class="tm-li-balance"
    coin="[object Object]"
  />
  <li-coin-stub
    class="tm-li-balance"
    coin="[object Object]"
  />
  <li-coin-stub
    class="tm-li-balance"
    coin="[object Object]"
  />
  <li-coin-stub
    class="tm-li-balance"
    coin="[object Object]"
  />
   
  <tm-btn-stub
    color="green"
    value="Get Tokens"
  />
   
  <send-modal-stub />
</tm-page-stub>
`;
